# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files
exports_files(["tsconfig.json"], visibility = ["//visibility:public"])

package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "index",
    srcs = ["index.ts"],
    deps = [
        "@npm//@types/node"
    ]
)
